--- a/static_charts.html
+++ b/static_charts.html
@@ -25,11 +25,12 @@
         <section>
             <h2>Loan Grade Counts</h2>
             <img src="static_plots/loan_grade_counts.png" alt="Bar chart showing loan grade counts" width="600">
-            <p>This bar chart highlights the distribution of loans across different grades (A-G). Grades A and B dominate, suggesting better financial risk profiles.
-
-                ADD FURTHER ANALYSIS test
-
-                <br>To further explore the impact of grades on risk, we analyze loan default rates by grade in the next visualization.
+            <p>This figure illustrates the distribution of loans across various credit grades, which indicate the creditworthiness or risk associated with each loan. Loan grades, ranging from A to G, 
+                are assigned based on factors such as the borrower’s credit history, income stability, and repayment capacity, with A representing the lowest risk and G the highest risk. 
+                The bar chart shows that the majority of loans are concentrated in grades A and B, suggesting that most borrowers fall into low-risk categories. 
+                As the grades progress from C to G, the number of loans decreases, with very few loans assigned to the riskiest grades (F and G). 
+                This trend indicates a preference for lending to higher-quality borrowers, while loans with higher risk are less commonly issued.
+                <br>To better understand how loan grade is correlated with default risk, lets visualize the proportion of loans that default based on grade.
             </p>
 
             <h2>Loan Status by Loan Grade</h2>
