--- a/static_charts.html
+++ b/static_charts.html
@@ -30,7 +30,8 @@
                 The bar chart shows that the majority of loans are concentrated in grades A and B, suggesting that most borrowers fall into low-risk categories. 
                 As the grades progress from C to G, the number of loans decreases, with very few loans assigned to the riskiest grades (F and G). 
                 This trend indicates a preference for lending to higher-quality borrowers, while loans with higher risk are less commonly issued.
-                <br>To better understand how loan grade is correlated with default risk, lets visualize the proportion of loans that default based on grade.
+            </p>
+            <p>To better understand how loan grade is correlated with default risk, lets visualize the proportion of loans that default based on grade.  
             </p>
 
             <h2>Loan Status by Loan Grade</h2>
