--- a/static_charts.html
+++ b/static_charts.html
@@ -73,7 +73,7 @@
             </p>
 
             <h2>Correlation Heatmap</h2>
-            <img src="static_plots/correlation_heatmap_updated" alt="Correlation heatmap of key default risk indicators" width="600">
+            <img src="static_plots/correlation_heatmap_updated.png" alt="Correlation heatmap of key default risk indicators" width="600">
             <p>The figure is a correlation heatmap showing relationships between personal and loan attributes. It highlights key insights regarding loan status: loan status negatively 
                 correlates with borrower age, income, and employment length, suggesting that younger, lower-income borrowers with shorter work histories are more likely to default. 
                 Conversely, loan status positively correlates with higher interest rates and loans comprising a larger portion of the borrower's income, indicating these loans are more prone to default. 
