--- a/static_charts.html
+++ b/static_charts.html
@@ -79,7 +79,7 @@
                 Conversely, loan status positively correlates with higher interest rates and loans comprising a larger portion of the borrower's income, indicating these loans are more prone to default. 
             </p>
             <p>These insights help lenders identify high-risk borrowers and make more informed lending decisions. These variables will be explored in more detail in the credit risk and borrower 
-                behavior section of this website</p>
+                behavior section of this website.</p>
         </section>
     </main>
 
