--- a/static_charts.html
+++ b/static_charts.html
@@ -45,7 +45,7 @@
             <p>Now that we have visualized how default rates differ by grade, lets look at the interest rates the correspond to loan grade.
             </p>
 
-            <h2>Interest Rate Boxplot by Loan Grade</h2>
+            <h2>Interest Rate by Loan Grade</h2>
             <img src="static_plots/interest_rate_by_grade_updated.png" alt="Box plot of interest rate by loan grade and status" width="600">
             <p>This figure visualizes the relationship between loan grades, interest rates, and loan default status. 
                 It is a box plot comparing the distribution of interest rates across different loan grades (A to G) while distinguishing between defaulted and non-defaulted loans.
