--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
             <h2>Overview of Visualizations</h2>
             <p>Our visualizations are categorized as follows:</p>
             <ul>
-                <li><a href="static_charts.html">Static Visualizations:</a> Analyze patterns in loan grades, default rates, and interest rates.</li>
-                <li><a href="dynamic_charts.html">Interactive Credi Risk Visualizations:</a> Explore relationships using filters for loan grade, age, and income.</li>
-                <li><a href="scatter.html">D3 Scatter Plot:</a> Investigate the relationship between loan percent income and interest rates.</li>
+                <li><a href="static_charts.html">Credit and Loan Grade Trends:</a> Analyze patterns in loan grades, default rates, and interest rates.</li>
+                <li><a href="dynamic_charts.html">Credit Risk and Borrower Behavior:</a> Explore relationships using filters for loan grade, age, and income.</li>
+                <li><a href="scatter.html">Loan Interest Rate and Percent of Income:</a> Investigate the relationship between loan percent income and interest rates.</li>
             </ul>
         </section>
     </main>
