fixed web page buttons

--- a/scatter.html
+++ b/scatter.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="static_charts.html">Static Charts</a></li>
-                <li><a href="dynamic_charts.html">Dynamic Charts</a></li>
-                <li><a href="scatter.html">D3 Scatter Plot</a></li>
+                <li><a href="static_charts.html">Static Credit Risk Trends</a></li>
+                <li><a href="dynamic_charts.html">Dynamic Credit Risk Analysis</a></li>
+                <li><a href="scatter.html">Scatter Plot: Income vs Interest Rate </a></li>
             </ul>
         </nav>
     </header>
