--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header>
-        <h1>Credit Risk Analysis - Loan Default Exloration</h1>
+        <h1>Credit Risk Analysis - Loan Default Exploration</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="static_charts.html">Static Credit Risk Trends</a></li>
-                <li><a href="dynamic_charts.html">Dynamic Credit Risk Analysis</a></li>
-                <li><a href="scatter.html">Scatter Plot: Income vs Interest Rate </a></li>
+                <li><a href="static_charts.html">Credit and Risk Trends</a></li>
+                <li><a href="dynamic_charts.html">Credit Risk Analysis and Borrower Behavior</a></li>
+                <li><a href="scatter.html">Income vs Interest Rate </a></li>
                 
             </ul>
         </nav>
@@ -223,9 +223,9 @@
             <h2>Overview of Visualizations</h2>
             <p>Our visualizations are categorized as follows:</p>
             <ul>
-                <li><a href="static_charts.html">Credit and Loan Grade Trends:</a> Analyze patterns in loan grades, default rates, and interest rates.</li>
+                <li><a href="static_charts.html">Credit and Risk Trends:</a> Analyze patterns in loan grades, default rates, and interest rates.</li>
                 <li><a href="dynamic_charts.html">Credit Risk and Borrower Behavior:</a> Explore relationships using filters for loan grade, age, and income.</li>
-                <li><a href="scatter.html">Loan Interest Rate and Percent of Income:</a> Investigate the relationship between loan percent income and interest rates.</li>
+                <li><a href="scatter.html">Income vs Interest Rate:</a> Investigate the relationship between loan percent income and interest rates.</li>
             </ul>
         </section>
     </main>
