add more anaylsis on txt file about plot choices

--- a/scatter.html
+++ b/scatter.html
@@ -26,6 +26,18 @@
             <h2>Loan Percent Income vs Loan Interest Rate</h2>
             <svg width="800" height="600"></svg>
             <p>The scatter plot aboves explores the relationship between the percentage of income dedicated to loans and the corresponding loan interest rates.</p>
+
+            <p><strong> scatter plot reveals compelling insights about the relationship between loan percent income and interest rates across various loan types. 
+                A clear negative correlation emerges, where higher percentages of income dedicated to loans generally correspond with lower interest rates, 
+                suggesting that borrowers who can commit more income to loan payments often secure better terms. Interest rates span from roughly 5% to 22%, 
+                with most loans clustering between 6% and 16%, while borrowers typically allocate between 0-50% of their income to loans, with the highest 
+                concentration in the 0-40% range. Notably, the pattern remains consistent across all loan types (Personal, Education, Medical, Venture, 
+                Home Improvement, and Debt Consolidation), indicating that loan purpose may not significantly influence interest rates. 
+                The data shows a prominent clustering in the 5-15% interest rate range when loan payments represent 20-40% of income, suggesting this range 
+                represents an optimal balance for both lenders and borrowers. This analysis implies that borrowers might benefit from structuring their loans to 
+                represent a larger portion of their income to secure better rates, though they should be cautious about exceeding the 50% threshold. 
+                The consistency across loan types suggests that borrowers should prioritize their income-to-loan ratio over loan type when seeking favorable rates.
+            </strong></p>
         </section>
     </main>
 
