fix some formatting on html

--- a/dynamic_charts.html
+++ b/dynamic_charts.html
@@ -69,7 +69,9 @@
                 Watch as the scatterplot updates to reflect only the selected category.
                 Hover over individual points to view detailed information about each record, such as income or loan amount, and see how loan intent impacts 
                 the relationship between income and age. Lastly, the different colors represent the loan intent categories which makes it easier for viewers to distinguish
-                between the different categories and understand the largest loan amounts by age ranges. The visualization also shows that the largest loan amounts like education and personal debt 
+                between the different categories and understand the largest loan amounts by age ranges. </p>
+                
+            <p> The visualization also shows that the largest loan amounts like education and personal debt 
                 is most common in the 20-30 age range as they are most likely to be in college or starting their careers. Moreover, the visualization shows that things like home improvement Debtand 
                 medical debt is more predominant in older age groups as they are more likely to have a house or have medical expenses as they age.
             </p>
