--- a/scatter.html
+++ b/scatter.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="static_charts.html">Static Credit Risk Trends</a></li>
-                <li><a href="dynamic_charts.html">Dynamic Credit Risk Analysis</a></li>
-                <li><a href="scatter.html">Scatter Plot: Income vs Interest Rate </a></li>
+                <li><a href="static_charts.html">Credit and Risk Trends</a></li>
+                <li><a href="dynamic_charts.html">Credit Risk Analysis and Borrower Behavior</a></li>
+                <li><a href="scatter.html">Income vs Interest Rate </a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,7 @@
             <svg width="800" height="600"></svg>
             <p>The scatter plot aboves explores the relationship between the percentage of income dedicated to loans and the corresponding loan interest rates.</p>
 
-            <p> The scatter plot reveals compelling insights about the relationship between loan percent income and interest rates across various loan types. 
+            <p> The scatter plot reveals interesting insights about the relationship between loan percent income and interest rates across various loan types. 
                 A clear negative correlation emerges, where higher percentages of income dedicated to loans generally correspond with lower interest rates, 
                 suggesting that borrowers who can commit more income to loan payments often secure better terms. Interest rates span from roughly 5% to 22%, 
                 with most loans clustering between 6% and 16%, while borrowers typically allocate between 0-50% of their income to loans, with the highest 
