--- a/static_charts.html
+++ b/static_charts.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="static_charts.html">Static Credit Risk Trends</a></li>
-                <li><a href="dynamic_charts.html">Dynamic Credit Risk Analysis</a></li>
-                <li><a href="scatter.html">Scatter Plot: Income vs Interest Rate </a></li>
+                <li><a href="static_charts.html">Credit and Risk Trends</a></li>
+                <li><a href="dynamic_charts.html">Credit Risk Analysis and Borrower Behavior</a></li>
+                <li><a href="scatter.html">Income vs Interest Rate </a></li>
             </ul>
         </nav>
     </header>
